fix landing page on mobile, add footer mobile menu

--- a/styles/_components/_mobile_menu.scss
+++ b/styles/_components/_mobile_menu.scss
@@ -11,6 +11,18 @@
   display: flex;
   flex-direction: column;
 
+  &.footer {
+    position: relative;
+    background: #f1d1e5;
+    height: fit-content;
+    padding: 21px 10px;
+
+    .mobile-header-menu-wrapper {
+      padding-right: 0px;
+      margin-top: 0px;
+    }
+  }
+
   &-top {
     width: 100%;
     display: flex;
@@ -39,6 +51,7 @@
     border-bottom: 1px solid #2c2c2c;
     padding-bottom: 12px;
     margin-bottom: 18px;
+    margin-top: 18px;
 
     &.active {
       border-bottom: 1px solid #FF62C4;
@@ -73,6 +86,10 @@
       text-transform: capitalize;
       color: #2c2c2c;
       flex: 1;
+
+      &.footer {
+        line-height: 14px;
+      }
     }
 
     .image {
