--- a/styles/_pages/_home.scss
+++ b/styles/_pages/_home.scss
@@ -28,7 +28,7 @@
     width: 45%;
 
     @media screen and (max-width: 768px) {
-      width: 80%;
+      width: 100%;
       margin-top: 40px;
     }
 
@@ -55,8 +55,9 @@
       color: #2c2c2c;
 
       @media screen and (max-width: 768px) {
-        font-size: 30px;
-        line-height: 40px;
+        font-size: 24px;
+        line-height: 32px;
+        text-align: center;
       }
     }
 
@@ -71,8 +72,9 @@
       margin: 0px;
 
       @media screen and (max-width: 768px) {
-        font-size: 23px;
-        line-height: 28px;
+        font-size: 24px;
+        line-height: 32px;
+        text-align: center;
       }
 
       img {
@@ -87,6 +89,11 @@
       line-height: 26px;
       text-transform: capitalize;
       margin-bottom: 17px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 14px;
+        line-height: 18px;
+      }
 
       &.pink {
         color: #ff62c4;
@@ -106,8 +113,10 @@
       }
 
       @media screen and (max-width: 768px) {
-        font-size: 14px;
+        font-size: 12px;
         line-height: 18px;
+        text-align: center;
+        max-width: 100%;
       }
     }
   }
@@ -127,9 +136,11 @@
     margin-top: 26px;
 
     @media screen and (max-width: 768px) {
-      font-size: 12px;
-      width: 150px;
-      height: 40px;
+      height: 50px;
+      width: 196px;
+      font-size: 14px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     &:hover {
@@ -196,8 +207,9 @@
       margin-top: 30px;
 
       @media screen and (max-width: 768px) {
-        font-size: 34px;
-        line-height: 48px;
+        font-size: 24px;
+        line-height: 32px;
+        max-width: 234px;
       }
     }
 
@@ -209,6 +221,7 @@
 
       @media screen and (max-width: 768px) {
         flex-direction: column;
+        margin-top: 50px;
       }
 
       .home-proposition-item {
@@ -227,6 +240,7 @@
         @media screen and (max-width: 768px) {
           width: 100%;
           margin-bottom: 20px;
+          padding: 28px 26px;
         }
 
         img {
@@ -242,7 +256,7 @@
 
           @media screen and (max-width: 768px) {
             font-size: 20px;
-            line-height: 30px;
+            line-height: 26px;
           }
         }
 
@@ -253,7 +267,7 @@
 
           @media screen and (max-width: 768px) {
             font-size: 12px;
-            line-height: 18px;
+            line-height: 22px;
           }
         }
       }
@@ -318,15 +332,14 @@
         line-height: 73px;
         text-transform: capitalize;
         color: #fd70c8;
-
-        @media screen and (max-width: 768px) {
-          font-size: 32px;
-          line-height: 48px;
-        }
       }
 
       .content {
         margin-top: 40px;
+
+        @media screen and (max-width: 768px) {
+          margin-top: 0px;
+        }
       }
 
       h1 {
@@ -335,29 +348,19 @@
         line-height: 27px;
         text-transform: capitalize;
         color: #2c2c2c;
-
-        @media screen and (max-width: 768px) {
-          font-size: 16px;
-          line-height: 24px;
-          margin-top: 20px;
-        }
       }
 
       p {
         font-size: 14px;
         line-height: 18px;
         color: #000000;
-
-        @media screen and (max-width: 768px) {
-          font-size: 12px;
-          line-height: 16px;
-        }
       }
 
       .home-page-button {
-        max-width: 100%;
-        // background: #2C2C2C;
-        // color: #FFFFFF;
+        @media screen and (max-width: 768px) {
+          max-width: 196px;
+          margin-left: 0px;
+        }
       }
     }
   }
@@ -383,11 +386,22 @@
       justify-content: center;
       align-items: center;
       color: #2c2c2c;
+
+      @media screen and (max-width: 768px) {
+        &:first-child {
+          margin-bottom: 33px;
+        }
+      }
     }
 
     .title {
       font-size: 28px;
       line-height: 36px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 16px;
+        line-height: 22px;
+      }
     }
 
     .number {
@@ -395,6 +409,11 @@
       font-family: $font-bold;
       font-size: 54px;
       line-height: 72px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 32px;
+        line-height: 43px;
+      }
     }
   }
 
@@ -411,20 +430,29 @@
     margin-top: 120px;
     color: #2c2c2c;
 
+    @media screen and (max-width: 768px) {
+      margin-top: 100px;
+    }
+
     .flock-numbers {
       font-family: $font-bold;
       font-size: 100px;
       line-height: 173px;
 
       @media screen and (max-width: 768px) {
-        font-size: 54px;
-        line-height: 123px;
+        font-size: 60px;
+        line-height: 104px;
       }        
     }
 
     .pigeons {
       font-size: 28px;
       line-height: 48px;
+
+      @media screen and (max-width: 768px) {
+        font-size: 16px;
+        line-height: 29px;
+      }
     }
   }
 
